[package]
name = "enoki-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.4.11"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "26eb51083488e9e3f58d624cacebe3dae3fa62d9" }
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rocket_contrib = { version = "0.4.11", features = ["json"] }
